crates/fairy_dust/tests/trybuild/fail/asset_root_after_capability.rs
fn main() {
    let builder = fairy_dust::sprinkle_example()
        .with_brp_extras()
        .with_asset_root("assets");
    drop(builder);
}
